2006-07-17	sschuetz

	* hashtable.c, utilFactory.c, utilHashtable.c, utilStringbuffer.c:
	Moved to sfcUtil, build as shared library now

2006-07-06 sschuetz

	* constclass.c:
	Bug 1518169: Fixed memory leak in constclass.c

2006-06-28  sschuetz

	* client.c:
	Bug 1513362: Added setting of status code in function cmciConnect2,
	checking for NULL in CMSetStatus macros
		
2006-06-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* cimXmlResp.y: 
	Bug 1513278: Segfault in property qualifier processing.
	Fixed erroneous action in the array property production.
	Added missing setClassQualifiers function.
	Removed a few shift/reduce conflicts.

	* client.c:
	Removed the inline qualifier for callback functions.

	* TEST/Makefile.am, TEST/test_qualifiers2.c:
	Added test code for class qualifiers.

2006-02-28  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>

	* client.c: 
	Bug 1439103: Added code to evaluate trailer headers for chunked transfers

2005-11-20  bestorga-oss

	* COPYING, args.c, array.c, cimXmlParser.c, cimXmlParser.h,
	cimXmlResp.y, client.c, cmci.h, cmcidt.h, cmcift.h, cmcimacs.h,
	constClass.c, datetime.c, enumeration.c, genericlist.c,
	genericlist.h, instance.c, native.h, objectpath.c, property.c,
	qualifier.c, string.c, utilList.h, utilStringBuffer.c,
	utilStringBuffer.h, value.c, TEST/show.c, TEST/test.c,
	TEST/test_an.c, TEST/test_an_2.c, TEST/test_as.c, TEST/test_as_2.c,
	TEST/test_ci.c, TEST/test_di.c, TEST/test_ec.c, TEST/test_ecn.c,
	TEST/test_ecn_ssl.c, TEST/test_ei.c, TEST/test_ein.c,
	TEST/test_gc.c, TEST/test_gi.c, TEST/test_gp.c, TEST/test_im.c,
	TEST/test_leak.c, TEST/test_objectpath.cpp, TEST/test_qualifiers.c,
	TEST/test_rf.c, TEST/test_rfn.c, TEST/test_si.c, TEST/test_sp.c,
	TEST/test_xq.c: 
	Bugs: 1362805. changed all license references to Eclipse Public
	license

2005-10-11  mihajlov

	* client.c, cmci.h, TEST/Makefile.am, TEST/test_ecn_ssl.c,
	man/man3/cmciConnect.3: 