@@ -13,3 +13,4 @@ install-sh
 ltmain.sh
 Makefile.in
 missing
+.settings
